--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,15 @@
-/* Related color  */
+/* Related Tag Style  */
 *{
-  font-family: 'Courier New', Courier, monospace;
+  /* font-family: 'Courier New', Courier, monospace; */
+  font-family: 'Belanosima', sans-serif;
+  font-family: 'DM Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+}
+h1{
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
 }
 .btn{
   width: 150px;
@@ -69,4 +78,33 @@ header{
   background-image: url('../images/developer.png'), url('../images/header_bg.png') , url('../images/developer.png');
   background-repeat: no-repeat;
   background-position: right bottom , right bottom , left bottom;
+}
+/* About Section  */
+.about , .work{
+  width: 70%;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+.address{
+  display: flex;
+  justify-content: space-around;
+}
+/* What i Do  */
+.icon{
+  width: 44px;
+  height: 44px;
+}
+.my_work{
+  display: flex;
+  gap:2% ;
+  width: 70%;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+.subject{
+  width: 267px;
+  height: 377px;
+  text-align: left;
 }
